<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="view"
            type="com.reza.base.presentation.detailpage.DetailPageView" />

        <variable
            name="vm"
            type="com.reza.base.presentation.detailpage.DetailPageViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorGray"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/img_favorite_detail"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/app_name"
                    android:onClick="@{v ->view.onClick(v)}"
                    android:src="@{vm.bIsFavorite ? @drawable/ic_favorite_fill : @drawable/ic_favorite_empty}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/txt_title_detail"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_favorite_empty" />

                <TextView
                    android:id="@+id/txt_title_detail"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{vm.bTextTitle}"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@+id/img_favorite_detail"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/img_favorite_detail"
                    tools:text="@string/detail_comment_text" />

                <TextView
                    android:id="@+id/txt_author_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{vm.bTextAuthor}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_title_detail"
                    tools:text="By : Reza" />

                <TextView
                    android:id="@+id/txt_date_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:text="@{vm.bTextDate}"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_author_detail"
                    tools:text="25/10/2019" />

                <TextView
                    android:id="@+id/txt_desc_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="32dp"
                    android:text="@string/detail_description_title"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_date_detail" />

                <TextView
                    android:id="@+id/txt_desc_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{vm.bTextDescription}"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc_title_detail"
                    tools:text="@string/detail_description_text" />

                <TextView
                    android:id="@+id/txt_comment_title_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:text="@string/detail_comment_title"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_desc_detail" />

                <TextView
                    android:id="@+id/txt_comment_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@{vm.bTextComment}"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txt_comment_title_detail"
                    tools:text="@string/detail_comment_text" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Loading-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="@{vm.bShowLoadingView ? View.VISIBLE : View.GONE}">

                <ProgressBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <!--Error-->
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/view_error"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:visibility="@{vm.bShowErrorView ? View.VISIBLE : View.GONE}"
                tools:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@{vm.bTextError}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Error" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </RelativeLayout>
    </ScrollView>
</layout>